# kuiyo-rules

./: .gitignore  README.md  pyproject.toml
src/kuiyo_rules/: __init__.py  identifiers.py  numeric.py  quality.py  serialization.py  time_series.py
src/kuiyo_rules/audit/: __init__.py  contracts.py  facts.py  identifiers.py  opening_candidate.py  parity.py  registry.py  specifications.py  statistics.py
src/kuiyo_rules/clauses/: __init__.py  models.py  trace.py
src/kuiyo_rules/contracts/: __init__.py  opening_candidate.py  opening_candidate_inputs.py
src/kuiyo_rules/definitions/: __init__.py  input_contract.py  models.py  opening_candidate.py
src/kuiyo_rules/evaluation/: __init__.py
src/kuiyo_rules/evaluation/opening_candidate/: __init__.py  evaluate.py  evaluation_features.py  evaluation_rules.py  features.py  generate.py  (+9 more)
src/kuiyo_rules/evidence/: __init__.py  contracts.py  fingerprints.py  opening_candidate.py
src/kuiyo_rules/execution/: __init__.py  identifiers.py
src/kuiyo_rules/registry/: __init__.py  catalog.py  models.py
src/kuiyo_rules/replay/: __init__.py  contracts.py  engine.py  opening_candidate.py  opening_candidate_evidence.py  registry.py
tests/: test_audit_contracts.py  test_clause_trace.py  test_contracts.py  test_definitions.py  test_evidence.py  test_execution_identity.py  test_opening_candidate_audit.py  test_opening_candidate_evaluate_tier.py  test_opening_candidate_generate.py  test_opening_candidate_inputs.py  test_package_boundary.py  test_quality.py  test_registry.py  test_replay_contracts.py  test_replay_execution_evidence.py
